# chum-world

./: .gitignore  LICENSE  README.md  StructColor.gd  default_bus_layout.tres  default_env.tres  export_presets.cfg  icon.png.import  project.godot
Font/: Base.tres  Big.tres  Mono.tres
Global/: ExportData.gd  GlobalConfig.gd  GlobalViewport.tscn  MeshData.gd  MessageOverlay.gd  MessageOverlay.tscn  preview.tres
Gui/: ArchiveFileSaver.tscn  ArchiveFileSelector.gd  ArchiveFileSelector.tscn  ArchiveSceneExport.gd  ArchiveSceneExport.tscn  BulkExport.gd  BulkExport.tscn  EditorList.gd  EditorList.tscn  ExitDialogue.gd  FileTree.gd  FileViewer.gd  FileViewer.tscn  HexEditor.gd  HexEditor.tscn  ItemHexViewer.gd  Test.gd  Test.tscn  Viewer.gd  Viewer.tscn  transparency.png.import  transparency20.png.import
Gui/Gizmos/: Camera.gd  Camera.tscn  Grid3D.gd  Grid3D.tscn  TransformGizmo.gd  TransformGizmo.tscn  Warp.tscn
Gui/Icon/: animation.png.import  bitmap.png.import  camera.png.import  camerazone.png.import  collisionvol.png.import  gameobj.png.import  hfog.png.import  hidden.png.import  invisisble.png.import  (+25 more)
Research/: node_flags.txt  subtypes.txt
Shader/: blank.tres  circle_line.shader  material.shader  node_highlight.tres  sprite3d_focus.tres  sprite3d_normal.tres  sprite3d_normal_shader.shader  unshaded.tres  unshaded_highlight.tres  warp.tres
Test/: RotTest.gd  RotTest.tscn  VolumeTest.tscn
chumcli/: Cargo.toml
chumcli/src/: json.rs  main.rs  util.rs
gdchum/: ByteData.gdns  Cargo.toml  ChumArchive.gdns  ChumFile.gdns  ChumReader.gdns  SceneData.gdns  gdnative_chum.gdnlib
gdchum/src/: bytedata.rs  chumfile.rs  lib.rs  macros.rs  names.rs  scenedata.rs  util.rs
gdchum/src/reader/: bitmap.rs  collisionvol.rs  lod.rs  material.rs  materialanim.rs  mesh.rs  mod.rs  node.rs  readerbitmap.rs  readermaterial.rs  readermaterialanim.rs  readerskin.rs  readersurface.rs  readertext.rs  readertmesh.rs  rotshape.rs  skin.rs  spline.rs  surface.rs  text.rs  tmesh.rs
gdchum/src/views/: bitmap.rs  camera.rs  collisionvol.rs  gameobj.rs  hfog.rs  light.rs  lod.rs  material.rs  materialanim.rs  materialobj.rs  mesh.rs  mod.rs  node.rs  omni.rs  rotshape.rs  skin.rs  sound.rs  spline.rs  surface.rs  warp.rs
libchum/: Cargo.toml
libchum/src/: animsymbol.rs  binary.rs  common.rs  dgc.rs  error.rs  export.rs  format.rs  lib.rs  macros.rs  ngc.rs  structure.rs
libchum/src/archive/: data.rs  mod.rs  nametable.rs
libchum/src/reader/: bitmap.rs  camera.rs  collisionvol.rs  gameobj.rs  hfog.rs  light.rs  lod.rs  material.rs  materialanim.rs  materialobj.rs  mesh.rs  mod.rs  node.rs  omni.rs  rotshape.rs  skin.rs  sound.rs  spline.rs  surface.rs  tmesh.rs  warp.rs
libchum/src/scene/: collada.rs  mod.rs
libchum/src/scene/collada/: controller.rs  geometry.rs  material.rs  mod.rs
libchum/src/scene/gltf/: export.rs  import.rs  mod.rs
libchum/src/util/: bezierpatch.rs  dsp.rs  error.rs  idmap.rs  mod.rs  xml.rs
wikiassets/: BlockExplain.png.import  Screenshot from 2020-05-14 22-39-59.png.import  junkdiff.png.import  mainmenu_bitmap13.png.import  totemtech1.png.import  totemtech2.png.import  totemtech3.png.import
(+85 files in other folders)
