[package]
name = "chumcli"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libchum = { path = "../libchum" }
clap = "2.33.1"
crc = "1.8.1"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"