[package]
name = "gdchum"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { git = "https://github.com/Jellonator/gltf", branch = "no_submodule" }
gltf-json = { git = "https://github.com/Jellonator/gltf", branch = "no_submodule" }
gdnative = "0.9.3"
libchum = { path = "../libchum" }
phf = { version = "0.8.0", features = ["macros"] }
hound = "3.4.0"

[lib]
crate-type = ["cdylib"]
