[package]
name = "gdchum"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
libchum = { path = "../libchum" }
phf = { version = "0.8.0", features = ["macros"] }
hound = "3.4.0"
anyhow = "1.0.38"

[lib]
crate-type = ["cdylib"]
