[package]
name = "libchum"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
image = "0.23.6"
imagequant = "2.13.0"
quick-xml = "0.18.1"
chrono = "0.4.13"
euclid = "^0.22.1"
