[package]
name = "libchum"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
crc = "1.8.1"
image = "0.23.13"
imagequant = "3.0.3"
quick-xml = "0.21.0"
chrono = "0.4.19"
euclid = "0.22.1"
meshopt = "0.1.9"
